--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <title>Poker hands</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="form-container">
-        <form action="/test.php" method="get">
+        <label for="hands">
+            Enter 5 hands into the boxes below.
+        </label>
+        <form action="#" id="hands" method="GET">
             <input type="text">
             <input type="text">
             <input type="text">
@@ -20,9 +24,21 @@
             </button>
         </form>
     </div>
+    <div class="errors-container">
+        <p class="errors"></p>
+    </div>
     <div class="results-container">
         <p class="results"></p>
     </div>
-    <script src="main.js"></script>
+
+    <script>
+        $('#hands').on('submit', function(e) {
+            e.preventDefault();
+            $.get('/test.php', function(data, status) {
+                console.log(status);
+                console.log(data);
+            });
+        });
+    </script>
 </body>
 </html>
